# sports-reference

./: .gitignore  Pipfile  README.md  pyproject.toml
notebooks/cbb/: postseason.ipynb
sports_reference/: _binary_tree.py
sports_reference/baseball/: __init__.py  players.py
sports_reference/baseball/players/: __init__.py  _index.py  _overview.py  _players.py  index.py  player.py  players.py
sports_reference/cbb/postseason/: __init__.py  _ncaa_bracket.py  _tournament.py  _tournament_history.py  tournament.py
sports_reference/data/: headers.json
