[build-system]
requires = ["setuptools > 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sports-reference"
version = "0.0.0"
description = "API wrapper and webscraper for the Sports Reference website."
readme = "README.md"
authors = [ { name = "Jacob Lee", email = "Jacob.J.Lee@outlook.com" } ]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">= 3.8"
dependencies = [
    "beautifulsoup4==4.12.2; python_full_version >= '3.6.0'",
    "certifi==2023.11.17; python_version >= '3.6'",
    "charset-normalizer==3.3.2; python_full_version >= '3.7.0'",
    "idna==3.6; python_version >= '3.5'",
    "lxml==5.0.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'",
    "numpy==1.26.2; python_version == '3.11'",
    "pandas==2.1.4; python_version >= '3.9'",
    "python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'",
    "pytz==2023.3.post1",
    "requests==2.31.0; python_version >= '3.7'",
    "six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'",
    "soupsieve==2.5; python_version >= '3.8'",
    "tzdata==2023.4; python_version >= '2'",
    "urllib3==2.1.0; python_version >= '3.8'"
]

[project.urls]
homepage = "https://github.com/JacobLee23/sports-reference"

[tools.setuptools.packages.find]
where = ["."]
include = ["sports_reference*"]
exclude = []
